Added missing Authorization field
